solve overflow on profile, add review

--- a/src/App.css
+++ b/src/App.css
@@ -485,7 +485,7 @@ textarea {
   flex-direction: column;
   align-items: center;
 }
-
+/* Reviews-box */
 .commenterImg {
   width: 40px;
 }
@@ -500,13 +500,35 @@ textarea {
 }
 
 .review-box {
-  display: flex;
   background-color: #fffcfc;
+  width: 400px;
   width: 800px;
   padding: 20px;
-  justify-content: space-evenly;
   border-radius: 5px;
   box-shadow: 0 3px 8px rgba(4, 15, 10, 0.601);
+  text-align: center;
+}
+.all-reviews {
+  display: flex;
+  padding: 25px 0px;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+}
+.all-reviews::-webkit-scrollbar {
+  height: 12px;
+}
+
+.all-reviews::-webkit-scrollbar-thumb,
+.all-reviews::-webkit-scrollbar-track {
+  border-radius: 92px;
+}
+
+.all-reviews::-webkit-scrollbar-thumb {
+  background: #c4cdc6;
+}
+
+.all-reviews::-webkit-scrollbar-track {
+  background:#e2ede5;
 }
 .review-box-h2 {
   text-align: center;
@@ -517,6 +539,7 @@ textarea {
   padding: 20px;
   margin: 10px;
   box-shadow: 0 3px 8px rgba(4, 15, 10, 0.601);
+
 }
 
 .each-review-box p {
@@ -526,6 +549,7 @@ textarea {
   margin: 2px;
 }
 
+/* pets-box */
 .pet-img {
   width: 40px;
   margin-bottom: 10px;
@@ -541,24 +565,43 @@ textarea {
 }
 
 .pet-box {
-  display: flex;
   background-color: #fffcfc;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  width: 400px;
   width: 800px;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 3px 8px rgba(4, 15, 10, 0.601);
+  text-align: center;
 }
+
 .pet-box-h2 {
   text-align: center;
 }
 .all-pets {
   display: flex;
-  justify-content: space-around;
+  padding: 25px 0px;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+}
+.all-pets::-webkit-scrollbar {
+  height: 12px;
 }
 
+.all-pets::-webkit-scrollbar-thumb,
+.all-pets::-webkit-scrollbar-track {
+  border-radius: 92px;
+}
+
+.all-pets::-webkit-scrollbar-thumb {
+  background: #c4cdc6;
+}
+
+.all-pets::-webkit-scrollbar-track {
+  background:#e2ede5;
+}
+.each-pet-box:hover{
+  background-color: #f1fff5;
+}
 .each-pet-box {
   box-sizing: border-box;
   background-color: #e2ede5;
@@ -566,6 +609,7 @@ textarea {
   margin: 10px;
   box-shadow: 0 3px 8px rgba(4, 15, 10, 0.601);
 }
+
 
 .each-pet-box h3 {
   margin: 5px;
@@ -641,6 +685,45 @@ textarea {
 }
 .aboutme-box h2 {
   margin: 0;
+}
+
+/* add review */
+
+.add-review {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e2ede5;
+  margin: 15px auto;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 3px 8px rgba(4, 15, 10, 0.601);
+}
+
+
+.add-review-btn {
+  width: 90%;
+  padding: 15px;
+  margin: 20px;
+  background-color: #8ca38e;
+  color: #000000;
+  font-size: 20px;
+  font-family: "Times New Roman", Times, serif;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: #000;
 }
 
 /* add new pet */
